# pygame-menu

./: .editorconfig  .gitignore  .readthedocs.yml  .replit  .travis.yml  LICENSE  LICENSE.rst  MANIFEST.in  Makefile  README.md  README.rst  build.bat  build.py  build_package.py  codecov.yml  configLoader.py  errors.py  example.py  example1.py  example2.py  example3.py  pyproject.toml  pyproject_update.py  readme.content.md  readme.json  requirements.txt  setup.py  twine.bat  utils.py  window.ini  world.ini
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codeql.yml  tests  tests.yml
diagrams/: widgets-package-internal.mmd
docs/: add_widgets.py  build.bat  conf.py  generate_resources.py  index.rst  requirements.txt
docs/_source/: add_sounds.rst  add_widgets.rst  add_widgets_manager.rst  advanced.rst  advanced_controller.rst  advanced_selection.rst  advanced_widget.rst  base.rst  baseimage.rst  contributors.rst  create_menu.rst  events.rst  gallery.rst  license.rst  menu.rst  migration_guide.rst  migration_guide_2_to_3.rst  migration_guide_3_to_4.rst  scrollarea.rst  selection.rst  themes.rst  widget.rst  widget_button.rst  widget_colorinput.rst  widget_core_selection.rst  widget_core_widget.rst  widget_image.rst  widget_label.rst  widget_menubar.rst  widget_scrollbar.rst  widget_selection_highlight.rst  widget_selector.rst  (+24 more)
pygameMenu/: __init__.py  baseimage.py  config.py  config_controls.py  config_menu.py  config_textmenu.py  controls.py  events.py  font.py  fonts.py  locals.py  menu.py  scrollarea.py  selector.py  sound.py  textinput.py  textmenu.py  textmenu2.py  themes.py  utils.py  version.py
pygame_menu/: __init__.py  _base.py  _decorator.py  _scrollarea.py  _types.py  _widgetmanager.py  baseimage.py  controls.py  custom_types.py  decorator.py  events.py  font.py  locals.py  menu.py  scrollarea.py  sound.py  themes.py  utils.py  version.py
test/: __init__.py  _utils.py  conftest.py  test_base.py  test_baseimage.py  test_compatibility.py  test_controls.py  test_decorator.py  test_examples.py  test_font.py  test_frame.py  test_menu.py  test_scrollarea.py  test_selection.py  test_sound.py  test_themes.py  test_utils.py  test_version.py  test_vuln_scan.py  test_widget_button.py  test_widget_dropselect.py  test_widget_frame.py  test_widget_image.py  test_widget_label.py  test_widget_menubar.py  test_widget_none.py  test_widget_progressbar.py  test_widget_rangeslider.py  test_widget_scrollbar.py  test_widget_selector.py  test_widget_surface.py  test_widget_table.py  test_widget_textinput.py  test_widget_toggleswitch.py  test_widgets.py
(+108 files in other folders)
