[tool.poetry]
name = "pygame-menu"
version = "4.0.0"
description = "A menu for pygame, simple, lightweight and easy to use"
authors = ["Pablo Pizarro R. @ppizarror.com"]

[tool.poetry.dependencies]
python = "^3.6"
pygame = "^1.9.3"
pyperclip = "^1.0.0"
typing-extensions = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
